<resources>
    <string name="app_name">AndroidClient</string>
    <string name="login_hint">Login</string>
    <string name="password_hint">Password</string>
    <string name="login_button">Sign in</string>
    <string name="info_tab">Инфо</string>
    <string name="history_tab">История</string>
    <string name="tax_tab">Налоги и переводы</string>
    <string name="create_receipt">Новая продажа за наличку</string>
    <string name="transaction_rub">+ %1$s ₽</string>
    <string name="transaction_rub_negative">+ %1$s ₽</string>
    <string name="rub">%1$s ₽</string>
    <string name="cb_exchange">Курсы валют ЦБ</string>
    <string name="usd_exchange">Доллар %1$s</string>
    <string name="euro_exchange">Евро %1$s</string>
    <string name="cards">Карты</string>
    <string name="cards_tax">Карты с налогообложением</string>

    <string name="first_card">Первая карта</string>
    <string name="second_card">Вторая карта</string>
    <string name="third_card">Третья карта</string>

    <string name="online_money">Входящий перевод</string>
    <string name="cash_money">Наличный расчёт</string>

    <string name="money_hint">Цена</string>
    <string name="name_hint">Покупатель</string>
    <string name="job_hint">Услуга</string>
    <string name="create_button">Создать</string>

    <string name="month_money">Выручка за %1$s</string>
    <string name="month_money_description">Наличный + безналичный расчёт</string>
    <string name="year_money">Выручка за год</string>
    <string name="year_money_description">До %1$s</string>
    <string name="tax_draft">Предварительный налог на всю выручку %1$s ₽</string>
    <string name="tax">Налоги</string>
    <string name="pay_tax">Оплатить налог</string>
    <string name="pay_tax_info">Необходимо оплатить налог\nдо %1$s</string>
</resources>
