<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="#F3F3F5"
    android:layout_height="match_parent">

    <LinearLayout
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:paddingTop="16dp"
        android:layout_height="108dp">

        <TextView
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="16sp"
            android:text="@string/cb_exchange"
            android:textColor="@android:color/white"
            android:layout_width="match_parent"
            android:layout_height="0dp" />

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="0dp">

            <TextView
                android:layout_weight="3"
                android:id="@+id/dollarTextView"
                android:gravity="center"
                tools:text="Dollar: 60"
                android:textSize="18sp"
                android:textColor="@android:color/white"
                android:layout_width="0dp"
                android:layout_height="match_parent" />

            <TextView
                android:layout_weight="3"
                android:textSize="18sp"
                android:textColor="@android:color/white"
                android:gravity="center"
                tools:text="Euro: 80"
                android:id="@+id/euroTextView"
                android:layout_width="0dp"
                android:layout_height="match_parent" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:text="@string/cards"
        android:gravity="start"
        android:paddingTop="24dp"
        android:paddingBottom="8dp"
        android:paddingStart="16dp"
        android:textSize="16sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:background="@android:color/white"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <ImageView
            android:src="@drawable/ic_card"
            android:layout_marginStart="16dp"
            android:layout_width="48dp"
            android:layout_height="48dp" />

        <TextView
            android:text="@string/first_card"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_marginStart="16dp"
            android:textSize="20sp"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/white"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <ImageView
            android:src="@drawable/ic_card"
            android:layout_marginStart="16dp"
            android:layout_width="48dp"
            android:layout_height="48dp" />

        <TextView
            android:text="@string/second_card"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_marginStart="16dp"
            android:textSize="20sp"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <TextView
        android:text="@string/cards_tax"
        android:gravity="start"
        android:paddingTop="24dp"
        android:paddingBottom="8dp"
        android:paddingStart="16dp"
        android:textSize="16sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/thirdCardLayout"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/white"
        android:foreground="?selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <ImageView
            android:src="@drawable/ic_card"
            android:layout_marginStart="16dp"
            android:layout_width="48dp"
            android:layout_height="48dp" />

        <TextView
            android:text="@string/third_card"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_marginStart="16dp"
            android:textSize="20sp"
            android:layout_height="wrap_content" />

    </LinearLayout>

</LinearLayout>
