<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorPrimary"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <FrameLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="60dp">

        <ImageView
            android:id="@+id/backArrowButton"
            android:layout_marginStart="16dp"
            android:layout_gravity="start|center_vertical"
            android:src="@drawable/ic_arrow_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/cardNameTextView"
            android:layout_gravity="center"
            android:textColor="@android:color/white"
            tools:text="Card name"
            android:textSize="24sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ImageView
            app:layout_constraintTop_toTopOf="@+id/backArrowButton"
            android:layout_gravity="end|center_vertical"
            app:layout_constraintBottom_toBottomOf="@+id/backArrowButton"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            android:id="@+id/statistics"
            android:src="@drawable/ic_stat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </FrameLayout>

    <TextView
        android:id="@+id/balanceTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="balance"
        android:layout_gravity="center_horizontal"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:layout_width="wrap_content"
        android:layout_height="48dp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="120dp">

        <TextView
            android:id="@+id/monthMoneyTextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:textColor="@android:color/white"
            tools:text="Выручка за сентябрь"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/monthMoneyInfo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/monthMoneyTextView"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:textSize="10sp"
            android:textColor="@color/textColorSecondary"
            android:text="@string/month_money_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/monthMoneyValue"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/monthMoneyInfo"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:textSize="18sp"
            android:textColor="@android:color/white"
            tools:text="100 р"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <View
            android:id="@+id/centerGuidline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="1dp"
            android:layout_height="1dp" />

        <TextView
            android:id="@+id/yearMoneyTextView"
            app:layout_constraintStart_toStartOf="@+id/centerGuidline"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:textColor="@android:color/white"
            android:layout_width="wrap_content"
            android:text="@string/year_money"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/yearMoneyRange"
            app:layout_constraintStart_toStartOf="@+id/yearMoneyTextView"
            app:layout_constraintTop_toTopOf="@+id/yearMoneyTextView"
            android:layout_marginTop="16dp"
            android:textSize="10sp"
            android:textColor="@color/textColorSecondary"
            android:text="@string/year_money_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/yearMoneyValue"
            app:layout_constraintStart_toStartOf="@+id/yearMoneyRange"
            app:layout_constraintTop_toTopOf="@+id/yearMoneyRange"
            android:layout_marginTop="16dp"
            android:textSize="18sp"
            android:textColor="@android:color/white"
            tools:text="100 р"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/taxValue"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/tax_draft"
            android:layout_height="wrap_content" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:background="@android:color/white"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:text="@string/info_tab"
            android:layout_height="wrap_content" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:text="@string/history_tab"
            android:layout_height="wrap_content" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:text="@string/tax_tab"
            android:layout_height="wrap_content" />

    </com.google.android.material.tabs.TabLayout>

    <FrameLayout
        android:id="@+id/accountContainer"
        android:background="@color/tabBackground"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp" />

</LinearLayout>
