<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:textColor="#999999"
        android:text="@string/tax"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:background="@android:color/white"
        android:layout_height="120dp">

        <ImageView
            android:id="@+id/star"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_margin="16dp"
            android:src="@drawable/ic_star"
            android:layout_width="24dp"
            android:layout_height="24dp" />

        <TextView
            android:id="@+id/payTaxTitle"
            app:layout_constraintStart_toEndOf="@+id/star"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:text="@string/pay_tax"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/infoPayTextView"
            app:layout_constraintStart_toStartOf="@+id/payTaxTitle"
            android:textSize="16sp"
            android:textColor="#BDBDBD"
            app:layout_constraintTop_toBottomOf="@+id/star"
            android:text="@string/pay_tax_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/taxValue"
            tools:text="200 р"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_margin="16dp"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:scaleType="fitCenter"
        android:src="@drawable/ic_send_stub"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
